--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 .App {
   text-align: center;
 }
-
+.nav {
+  background-color: #88BDBC;
+  font-size: 20px;
+  border: 5px solid #254e58;
+}
+.posts {
+  background-color: #88BDBC;
+}
+/* .search-button {
+  color: white;
+  background-color: #254e58;
+} */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
