--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,24 @@
 }
 .nav {
   background-color: #88BDBC;
-  font-size: 20px;
-  border: 5px solid #254e58;
+}
+a.navbar-brand {
+  font-size: 50px;
+}
+.mr-auto {
+  font-size: 30px;
+  margin-right: 40px;
+}
+a.mr-auto.navbar.nav {
+  justify-content: center;
+  margin-right: 80px;
+  padding-top: 80px;
+}
+form {
+  padding: 150px;
+}
+.title {
+  font-size: 300px;
 }
 .posts {
   background-color: #88BDBC;
@@ -16,6 +32,14 @@
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+img {
+  height: 110px;
+  width: 110px;
+  padding-right: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 50%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
